fix: gapmatch/hottext: clearfix for image wrap

--- a/views/scss/item-creator.scss
+++ b/views/scss/item-creator.scss
@@ -1148,7 +1148,9 @@ img.dragging.ui-draggable-dragging {
                         display: flex;
                     }
                 }
-                .cke_editable {
+                &:after {
+                    content: "";
+                    display: block;
                     clear: both;
                 }
             }
